@@ -1,3 +1,8 @@
+Tue Mar  4 09:18:43 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (options): Force --extension to appear after --sections
+	  in --help output.
+
 Mon Mar  3 21:46:36 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/po/man-db.pot: Update.
